# utility-bills-processor

./: .flake8  .gitignore  .pre-commit-config.yaml  .sublime-project  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
bills_analyzer/: national_grid_gas.py
scripts/: setup_repo.sh
src/utility_bills_processor/: __init__.py  cli.py  national_grid_gas.py  water_and_sewer.py
src/utility_bills_processor/_common/: bill.py  dataclass_converters.py  readers.py
tests/: test_national_grid_gas.py  test_versions.py  test_water_and_sewer.py
utility_bills_processor/: __init__.py  cli.py  national_grid_gas.py  water_and_sewer.py
utility_bills_processor/_common/: bill.py  dataclass_converters.py  readers.py
