[tool.poetry]
name = "utility-bills-processor"
version = "0.1.0"
description = ""
authors = ["DidgetyTech <32182119+DidgetyTech@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^3.16"
click = "^8.1.7"
colorlog = "^6.8.2"

[tool.poetry.scripts]
process_utility_bill="utility_bills_processor.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.black]
target-version = ["py312"]
extend-exclude = ".venv,.mypy_cache"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["utility_bills_processor"]

[tool.isort]
profile = "black"
skip_gitignore = true
include_trailing_comma = true
color_output = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
