[tool.poetry]
name = "utility-bills-processor"
version = "0.1.0"
description = ""
authors = ["DidgetyTech <32182119+DidgetyTech@users.noreply.github.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-utility-bill="utility_bills_processor.cli:process_utility_bill"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^3.16"
click = "^8.1.7"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = {extras = ["toml"], version = "^7.6.0"}
pytest-cov = "^5.0.0"

[tool.black]
target-version = ["py312"]
extend-exclude = ".venv,.mypy_cache"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["utility_bills_processor"]

[tool.isort]
profile = "black"
skip_gitignore = true
include_trailing_comma = true
color_output = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["utility_bills_processor"]

[tool.coverage.report]
show_missing = true
