[tool.poetry]
name = "utility-bills-processor"
version = "0.1.0"
description = "A tool to process utility bills into data."
authors = ["DidgetyTech <32182119+DidgetyTech@users.noreply.github.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process-utility-bill="utility_bills_processor.cli:process_utility_bill"

[tool.poetry.dependencies]
python = "^3.12"
pypdf = "^3.16"
click = "^8.1.7"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = {extras = ["toml"], version = "^7.6.0"}
pytest-cov = "^5.0.0"

[tool.poetry.group.ide.dependencies]
mypy = "^1.11.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
flake8-bugbear = "^24.4.26"
flake8 = "^7.1.0"
flake8-bandit = "^4.1.1"
flake8-docstrings = "^1.7.0"

[tool.black]
target-version = ["py312"]
extend-exclude = ".venv,.mypy_cache"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
packages = ["utility_bills_processor"]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
skip_gitignore = true
include_trailing_comma = true
color_output = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["utility_bills_processor"]

[tool.coverage.report]
show_missing = true
